# master-thesis-experiments

./: 4.1 Baseline.ipynb  4.2 Elo prediction.ipynb  4.3 The Snake Scheduler.ipynb  4.4 Random Snake.ipynb  4.5 Convergence in the Snake format.ipynb  README.md  main.py  pyproject.toml
notebooks/: 4.1 Baseline.ipynb
tests/: test_sebiter.py  test_treeProb.py
utils/: __init__.py  commons.py  metrics.py  rssc.py  sebiter.py  tracking.py  treeprob.py  visualisation.py
